# ai-manga-factory

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  build_web.bat  build_web.sh  check_api.py  docker-compose.yml  final_quality_report.md  quality_check_report.json  requirements-source-ingestion.txt  requirements-storage.txt  requirements.txt  run_backend.ps1  run_pack.bat  start.bat
apps/api/: pyproject.toml
apps/api/ai_manga_factory_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/src/: main.py
apps/api/src/api/routes/: assets.py  audit_logs.py  auth.py  health.py  jobs.py  memories.py  metrics.py  monitoring.py  previews.py  projects.py  prompt_evolution.py  reviews.py  settings.py  storage.py  workflows.py
apps/api/src/api/schemas/: asset.py  audit.py  auth.py  job.py  memory.py  monitoring.py  project.py  prompt_evolution.py  review.py  settings.py  storage.py  workflow.py
apps/api/src/application/orchestrators/: project_initializer.py
apps/api/src/application/queries/: artifacts.py  monitoring.py  preview.py
apps/api/src/application/services/: archive_sync_runner.py  artifact_service.py  asset_service.py  async_job_runner.py  job_runtime_service.py  (+6 more)
apps/api/src/core/: config.py  dependencies.py  security.py
apps/api/tests/integration/: test_ark_provider_runtime.py  test_artifact_preview_api.py  test_async_job_runner.py  test_monitoring_api.py  test_project_api.py  test_security_api.py
apps/api/tests/unit/: test_archive_registry.py  test_execution_engine.py  test_provider_router.py
(+378 files in other folders)
